[package]
name = "tempa"
version = "0.1.0"
description = "Simple timing library for the Empa."
authors = ["RSSchermer <roland0507@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
empa = { version = "0.1.0", path = "../glitz/crates/empa", features = ["bytemuck"] }
